fix abbr text invisible

--- a/htdocs/luci-static/argon/cascade.less
+++ b/htdocs/luci-static/argon/cascade.less
@@ -470,7 +470,7 @@ code {
 abbr {
     cursor: help;
     text-decoration: underline;
-    color: #fff;
+    color: #797474;
 }
 
 hr {
